<resources>
    <string name="app_name">快踩我</string>
    <string name="app_team">LYM</string>

    <string name="app_name_tip">名称：</string>
    <string name="app_version_tip">版本：</string>
    <string name="app_team_tip">团队：</string>

    <string name="app_update_title">发现新版本</string>
    <string name="app_update_ok">立即更新</string>
    <string name="app_update_ignore">忽略</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="global_highest_score">全球最高分：</string>
    <string name="my_highest_score">我的最高分：</string>
    <string name="start_game">开始游戏</string>
    <string name="go_back">返回</string>
    <string name="history_highest_score">历史最高：</string>
    <string name="history_highest_score_no_colon">历史</string>
    <string name="current_score">当前分数：</string>
    <string name="current_score_no_colon">当前分数</string>
    <string name="no_change">记录不变！</string>
    <string name="over_global_score">超越全球最高分了！！厉害！</string>
    <string name="good_job">打破记录了,干得漂亮！</string>
    <string name="not_far_to_break_record">好可惜，差点就可以打破记录了</string>
    <string name="need_work_hard">要继续努力哦！</string>
    <string name="play_again">再来一局</string>
    <string name="main_activity">主菜单</string>
    <string name="game_pause">游戏暂停</string>
    <string name="terminate">终止</string>
    <string name="resume">继续</string>

    <string name="game_dialog_score_getting_tip">获取中</string>
    <string name="game_dialog_score_fail_tip">获取失败</string>


    <string name="game_color">踩颜色</string>
    <string name="game_word">踩边线</string>
    <string name="game_digit">踩数字</string>

    <string name="setting_about">关于</string>
    <string name="setting_feedback">意见反馈</string>

    <string name="feedback_ok">确定</string>
    <string name="feedback_cancel">取消</string>
    <string name="feedback_input_hint">请输入您的意见</string>

    <string name="game_rule">游戏规则</string>
    <string name="help_color_text">
        1.踩颜色\n
            只能踩背景颜色与颜色文本相同的方块，错踩，漏踩以及踩到界外游戏结束。速度越快踩对
            一个方块所得的分数越多。
    </string>
    <string name="help_digit_text">
        2.踩数字\n
            每个方块上都有一个数字，点击一次减一直到为0为止。
    </string>
    <string name="help_line_text">
        3.踩边线\n
            在下落的方块的下边线不超过指定的边线时，越接近所得分数越多，如果下落的方块的下边
            线超过了指定的边线，或者点击方块外区域则游戏结束。
    </string>

    <string name="black_color_text">黑</string>
    <string name="red_color_text">红</string>
    <string name="blue_color_text">蓝</string>
    <string name="orange_color_text">橙</string>
    <string name="palm_color_text">棕</string>
    <string name="purple_color_text">紫</string>

    <string name="app_exit_tip">你真的要退出吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

</resources>
