<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddeef0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/help_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_rule"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="30dip"/>

            <TextView
                android:id="@+id/help_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_color_text"
                android:layout_marginBottom="15dip"/>
            <TextView
                android:id="@+id/help_digit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_digit_text"
                android:layout_marginBottom="15dip"/>
            <TextView
                android:id="@+id/help_line_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_text"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>