<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dip">

    <TextView
        android:id="@+id/app_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_update_title"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/app_update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/app_update_ignore"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_update_ignore"
            android:textSize="18sp"
            android:textColor="#7754eb"
            android:gravity="center_horizontal"
            android:clickable="true"/>
        <TextView
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:background="#ccc"/>
        <TextView
            android:id="@+id/app_update_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_update_ok"
            android:textSize="18sp"
            android:textColor="#7754eb"
            android:gravity="center_horizontal"
            android:clickable="true"/>

    </LinearLayout>
    
</LinearLayout>
