<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dip"
    android:paddingBottom="40dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip">
        <TextView
            android:id="@+id/about_name_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_tip"
            android:textSize="@dimen/about_textSize"/>
        <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_name_tip"
            android:textSize="@dimen/about_textSize"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip">
        <TextView
            android:id="@+id/about_version_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_tip"
            android:textSize="@dimen/about_textSize"/>
        <TextView
            android:id="@+id/about_versioncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_version_tip"
            android:textSize="@dimen/about_textSize"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/about_team_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_team_tip"
            android:textSize="@dimen/about_textSize"/>
        <TextView
            android:id="@+id/about_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_team_tip"
            android:textSize="@dimen/about_textSize"/>
    </RelativeLayout>


</LinearLayout>
