<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_highest_score"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_highest_score"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/dialogFont"
                android:id="@+id/game_over_global_highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/dialogFont"
                android:id="@+id/game_over_my_highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/running_man_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/dialogFont"
                android:id="@+id/current_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/running_man"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/running_man"/>
        </LinearLayout>

        <ProgressBar
            style="@style/custom_progressbar"
            android:id="@+id/ranking_progressbar"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:progress="40"/>
    </LinearLayout>

    <TextView
        style="@style/dialogFont"
        android:id="@+id/game_over_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:orientation="horizontal">

        <Button
            style="@style/dialogButton"
            android:id="@+id/play_again"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/play_again"/>

        <Button
            style="@style/dialogButton"
            android:id="@+id/go_to_main_activity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/main_activity"/>
    </LinearLayout>
</LinearLayout>
