<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:weightSum="6"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:paddingLeft="15dip"
            android:paddingRight="15dip">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/menu_btn_how_to_play"
                android:id="@+id/menu_iv_how_to_play"
                android:layout_marginLeft="10dp"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/app_settings_icon"
                android:id="@+id/menu_iv_setting"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    <RelativeLayout
        android:layout_weight="2"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="2"
        android:id="@+id/menu_ll_middle_selsct"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="@style/dialogButton"
                android:text="@string/game_color"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/menu_bt_colors" />
            <Button
                style="@style/dialogButton"
                android:text="@string/game_digit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/menu_bt_digits"/>
            <Button
                style="@style/dialogButton"
                android:text="@string/game_word"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/menu_bt_words"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/menu_ll_bottom"
        android:weightSum="6"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="5"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/exit"
                android:id="@+id/menu_iv_exit"
                android:layout_gravity="center_vertical"
                android:layout_width="40dip"
                android:layout_height="40dip"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

